[package]
name = "ebook-conversion"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[[bench]]
name = "palmdoc_compression"
harness = false

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[dependencies]
memchr = "2.7.1"
