[package]
name = "ebook-conversion"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[[bench]]
name = "palmdoc"
harness = false

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
lipsum = "0.9.0"
rand = "0.8.5"

[dependencies]
bitvec = "1.0.1"
byteorder = "1.5.0"
constriction = "0.3.5"
huffman-coding = "0.1.2"
huffman-compress = "0.6.1"
memchr = "2.7.1"
thiserror = "1.0.57"
